Opened 8 years ago
Closed 6 weeks ago
#7712 closed bug (fixed)
Deskbar item sorting is not locale-sensitive (easy)
Reported by: | pulkomandy | Owned by: | nobody |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Applications/Deskbar | Version: | R1/Development |
Keywords: | gsoc2014 | Cc: | starsseed@… |
Blocked By: | Blocking: | ||
Has a Patch: | no | Platform: | All |
Description
It is now possible to have localized app names in deskbar and tracker.
The french name for StyledEdit is "éditeur stylé", it should be sorted somewhere around the E letter, between "Décompresseur" (Expander) and "Gestionnaire de disques" (DriveSetup). Currently, it's listed after Wonderbrush.
Use the locale kit locale-aware sorting to make this better.
Attachments (1)
Change History (11)
comment:1 Changed 8 years ago by
Cc: | starsseed@… added |
---|
comment:2 Changed 5 years ago by
Keywords: | easy removed |
---|---|
Summary: | Deskbar item sorting is not locale-sensitive → Deskbar item sorting is not locale-sensitive (easy) |
comment:3 Changed 5 years ago by
Has a Patch: | set |
---|
comment:4 Changed 5 years ago by
Changed 5 years ago by
Attachment: | 0001-Fix-7712-Deskbar-item-sorting-is-not-locale-sensitiv.patch added |
---|
New version with global collator
comment:5 Changed 5 years ago by
A locale aware version of NaturalCompare in WindowMenuItem.cpp is also needed, but that should be a new ticket.
comment:6 Changed 5 years ago by
Keywords: | gsoc2014 added |
---|
comment:7 Changed 3 years ago by
App names sorted according to locale in hrev50507
We still need to make a locale-aware version of NaturalCompare before we can fully close this ticket.
comment:8 Changed 2 years ago by
Has a Patch: | unset |
---|
Marking patch as obsolete because it is already applied. Leaving open because of NaturalCompare as mentionned above.
comment:9 Changed 23 months ago by
Owner: | changed from axeld to nobody |
---|---|
Status: | new → assigned |
comment:10 Changed 6 weeks ago by
Resolution: | → fixed |
---|---|
Status: | assigned → closed |
NaturalCompare is now locale-aware.
Creating a BCollator is an expansive operation (it loads data from disk to configure it to the current locale). So, it should be done only once, and kept for the whole lifetime of the TExpandoMenuBar.