Deskbar: item sorting is not locale-sensitive

Fix using a global BCollator defined in BarApp.

Called static CompareByName() method in TTeamMenu instead of
duplicating code, made method public.

This comes from a patch by 0xffea for GSoC 2014.

A locale aware version of NaturalCompare in WindowMenuItem.cpp
is still needed.

Fixes #7712

Signed-off-by: John Scipione <jscipione@gmail.com>