src/apps/deskbar/BarApp.h
@@ -36,6 +36,7 @@ All rights reserved.
 #define BAR_APP_H
 
 
+#include <Collator.h>
 #include <Server.h>
 
 #include "BarSettings.h"
@@ -75,6 +76,8 @@ const int32 kIconCacheCount = (kMaximumIconSize - kMinimumIconSize)
 
 // update preferences message constant
 const uint32 kUpdatePreferences = 'Pref';
+
+extern BCollator gCollator;
 
 /* --------------------------------------------- */
 
